ionos_sbx/test-caddy/exposed-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: test-caddy-exposed-svc
  namespace: test-caddy
spec:
  selector:
    app.kubernetes.io/instance: test-caddy-exposed
    app.kubernetes.io/name: test-caddy-exposed
  ports:
    - name: http
      port: 8080
      targetPort: 8080
