ionos_sbx/test-caddy/via-nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: echo-via-nginx
  namespace: test-caddy
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/instance: echo-via-nginx
    app.kubernetes.io/name: echo-via-nginx
  ports:
    - name: http
      port: 8080
      targetPort: 8080
